--- a/styles/media.css
+++ b/styles/media.css
@@ -30,6 +30,7 @@
 @media(max-width: 600px) {
     .nav__item:nth-child(2) {
         overflow-x: auto;
+        overflow-y: hidden;
         white-space: nowrap;
         width: 100%;
         margin: 0 20px;
