--- a/styles/modal.css
+++ b/styles/modal.css
@@ -58,8 +58,8 @@
     color: #fff;
     cursor: pointer;
     position: absolute;
-    right: 10px;
-    top: -20px;
+    right: 0;
+    top: -30px;
 }
 
 .modal__title::placeholder {
