--- a/styles/media.css
+++ b/styles/media.css
@@ -94,6 +94,12 @@
         width: 100%;
     }
 
+    .full__content_title {
+        width: 100%;
+        line-height: 100%;
+        font-size: 18px;
+    }
+
     .modal {
         width: auto;
     }
